include(CMakeDependentOption)

CMAKE_DEPENDENT_OPTION(USE_CPU "Use CPU kernels" ON "NOT USE_GPU;NOT USE_CPU_GPU" OFF)
CMAKE_DEPENDENT_OPTION(USE_GPU "Use GPU kernels" ON "NOT USE_CPU;NOT USE_CPU_GPU" OFF)
CMAKE_DEPENDENT_OPTION(USE_CPU_GPU "Use CPU+GPU kernels" ON "NOT USE_GPU;NOT USE_CPU" OFF)
CMAKE_DEPENDENT_OPTION(USE_SPHERICAL "Use Spherical Harmonics Expansions" ON "NOT USE_CARTESIAN" OFF)
CMAKE_DEPENDENT_OPTION(USE_CARTESIAN "Use Cartesian Expansions" ON "NOT USE_SPHERICAL" OFF)
ADD_SUBDIRECTORY(valveless_heart)
ADD_SUBDIRECTORY(swarm)