
MACRO(MAKE_TESTS TestList DriverName)
    SET(FileList "")
    FOREACH(test ${TestList})
        SET(FileList ${FileList} ${test})
    ENDFOREACH(test)
    CREATE_TEST_SOURCELIST(TestDriverSources ${DriverName}.cpp ${FileList})
    ADD_EXECUTABLE(${DriverName} ${TestDriverSources})
    FOREACH(test ${FileList})
        GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
        ADD_TEST(${TestName} ${CMAKE_CURRENT_BINARY_DIR}/${DriverName} ${TestName})
    ENDFOREACH (test) 
ENDMACRO(MAKE_TESTS)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(particle_system)
