SET(APP_NAME swarm)

ADD_EXECUTABLE(${APP_NAME} swarm.cpp)
TARGET_LINK_LIBRARIES(${APP_NAME} ${APP_LIBS})

IF(USE_EXAFMM)
    TARGET_LINK_LIBRARIES(${APP_NAME} Kernels)
    IF(USE_QUARK)
        TARGET_LINK_LIBRARIES(${APP_NAME} quark)
    ENDIF(USE_QUARK)
ENDIF()



IF(ADD_SUBMISION_SCRIPTS)
    SET(QUEUE gpu)
    SET(NUM_PROCESSORS 1)
    SET(NUM_CORES_PER_PROCESSORS 12)
    SET(PROGRAM_NAME swarm)
    SET(PROGRAM_PATH ${MOOPS_BINARY_DIR}/examples/${PROGRAM_NAME})
    SET(JOB_NAME moops_${PROGRAM_NAME})
    INCLUDE(${PROJECT_SOURCE_DIR}/cmake/KillDevil.cmake)
ENDIF()
