set(PROGRAM_NAME valveless_heart)
IF(USE_QUARK)
    INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/math/fluid_solver/stokes/fmm/exafmm/external/include)
    add_definitions(-DQUARK)
    set(APP_LIBS ${APP_LIBS} quark)
ENDIF(USE_QUARK)
ADD_DEFINITIONS(-DSpherical)
IF(USE_CUDA)
    ADD_DEFINITIONS(-Dcpugpu)
ELSEIF(USE_CUDA)
    ADD_DEFINITIONS(-Dcpu)
ENDIF(USE_CUDA)
ADD_EXECUTABLE(${PROGRAM_NAME} valveless_heart.cpp)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} ${APP_LIBS})

set(QUEUE gpu)
set(NUM_PROCESSORS 1)
set(NUM_CORES_PER_PROCESSORS 12)
set(PROGRAM_PATH ${MOOPS_BINARY_DIR}/examples/${PROGRAM_NAME})
set(JOB_NAME moops_${PROGRAM_NAME})
INCLUDE(${PROJECT_SOURCE_DIR}/cmake/KillDevil.cmake)
