set(PROGRAM_NAME valveless_heart)

ADD_EXECUTABLE(${PROGRAM_NAME} valveless_heart.cpp)
TARGET_LINK_LIBRARIES(${PROGRAM_NAME} ${APP_LIBS})

IF(ADD_SUBMISION_SCRIPTS)
set(QUEUE gpu)
set(NUM_PROCESSORS 1)
set(NUM_CORES_PER_PROCESSORS 12)
set(PROGRAM_PATH ${MOOPS_BINARY_DIR}/examples/${PROGRAM_NAME})
set(JOB_NAME moops_${PROGRAM_NAME})
INCLUDE(${PROJECT_SOURCE_DIR}/cmake/KillDevil.cmake)
ENDIF()
