

add_executable(gmres gmres.cpp)

add_executable(newton newton.cpp)
add_executable(forward_euler forward_euler.cpp)
add_executable(backward_euler backward_euler.cpp)
add_executable(explicit_sdc explicit_sdc.cpp)
add_executable(semi_implicit_sdc semi_implicit_sdc.cpp)
add_executable(newton_krylov_sdc newton_krylov_sdc.cpp)
add_executable(newton_krylov_euler newton_krylov_euler.cpp)
